# rare-protocol-py

./: .gitignore  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  README.md  SECURITY.md  STATUS.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: CONTRIBUTING_RIP.md  RIP_INDEX.md  RIP_TEMPLATE.md  rip-0000-rip-process.md  rip-0001-identity-attestation.md  rip-0002-delegation.md  rip-0003-challenge-auth.md  rip-0004-key-rotation.md  rip-0005-platform-onboarding-and-events.md
docs/test-vectors/: rip-v1-signing-inputs.json
scripts/: check_english_only.sh
src/rare_identity_protocol/: __init__.py  challenge.py  crypto.py  errors.py  expiring_store.py  name_policy.py  tokens.py
src/rare_identity_verifier/: __init__.py  verifier.py
src/rare_protocol/: __init__.py  actions.py  challenge.py  crypto.py  expiring_store.py  name_policy.py  tokens.py
tests/: test_protocol_unit.py  test_vectors.py  test_verifier_unit.py
