[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rare-protocol"
version = "0.1.0"
description = "Rare identity protocol and verifier libraries"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rare_protocol*", "rare_identity_verifier*"]
